--- a/quiz/build.gradle
+++ b/quiz/build.gradle
@@ -3,7 +3,9 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
+apply plugin: 'com.github.dcendents.android-maven'  
 
+group='com.github.saeedmpt'
 android {
     compileSdkVersion 30
     buildToolsVersion '30.0.3'
