--- a/quiz/build.gradle
+++ b/quiz/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.residentDmc'
 
 android {
     compileSdkVersion 30
